--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
         <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+        <link href="./dist/main.css" rel="stylesheet">
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <h1 class="bg-green-500 text-3xl my-52 text-white">Hello World!</h1>
         We are using Node.js <span id="node-version"></span>, Chromium
         <span id="chrome-version"></span>, and Electron
         <span id="electron-version"></span>.
