--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <h1 class="bg-green-500 text-3xl my-52 text-white">Hello World!</h1>
+        <h1 class="bg-sky-500 text-2xl my-52 text-white">Hello World!</h1>
         We are using Node.js <span id="node-version"></span>, Chromium
         <span id="chrome-version"></span>, and Electron
         <span id="electron-version"></span>.
