--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -11,25 +11,7 @@
     </head>
 
     <body class="relative">
-        <div class="absolute top-0 right-0 left-0 bg-slate-200 h-10 flex justify-end items-center z-50">
-            <button class="flex items-center gap-2 text-white bg-gray-400 hover:bg-gray-500 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-3 py-1 me-2 mr-3"
-                    id="back">
-                <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                          d="M512 256A256 256 0 1 0 0 256a256 256 0 1 0 512 0zM217.4 376.9L117.5 269.8c-3.5-3.8-5.5-8.7-5.5-13.8s2-10.1 5.5-13.8l99.9-107.1c4.2-4.5 10.1-7.1 16.3-7.1c12.3 0 22.3 10 22.3 22.3l0 57.7 96 0c17.7 0 32 14.3 32 32l0 32c0 17.7-14.3 32-32 32l-96 0 0 57.7c0 12.3-10 22.3-22.3 22.3c-6.2 0-12.1-2.6-16.3-7.1z" />
-                </svg>
-                <span id="back_text"></span>
-            </button>
-            <button class="flex items-center gap-2 text-white bg-sky-400 hover:bg-sky-500 focus:ring-4 focus:ring-sky-300 font-medium rounded-lg text-sm px-3 py-1 me-2 mr-3"
-                    id="logout">
-                <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                    <path
-                          d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z" />
-                </svg>
-                <span id="logout_text"></span>
-            </button>
+        <div class="absolute top-0 right-0 left-0 bg-slate-200 h-10 z-50" id="header">
         </div>
         <div class="relative w-full pt-10 min-h-screen">
 
@@ -71,19 +53,6 @@
                         <span class="t_view_edit"></span>
                     </button>
                 </div>
-
-                <div class="bg-tableRow text-gray-600 px-3 py-1.5 font-medium col-span-2">
-                    <span class="t_family_type_children_s_home_questionnaire"></span>
-                </div>
-                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium">
-                    <span id="status_FTCH"></span>
-                </div>
-                <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_FTCH">
-                        <span class="t_view_edit"></span>
-                    </button>
-                </div>
-
             </div>
 
             <div class="grid grid-cols-7 w-full mt-10 px-5 gap-0.5">
@@ -168,30 +137,6 @@
                         <span class="t_view"></span>
                     </button>
                 </div>
-
-                <div class="bg-tableRowHover text-gray-600 px-3 py-1.5 font-medium col-span-2 flex items-center">
-                    <span class="t_patronat_family_questionnaires"></span>
-                </div>
-                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
-                    <span id="t2c41"></span>
-                </div>
-                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
-                    <span id="t2c42"></span>
-                </div>
-                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
-                    <span id="t2c43"></span>
-                </div>
-                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium  flex items-center justify-center">
-                    <span id="t2c44"></span>
-                </div>
-                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_PFQ">
-                        <span class="t_view"></span>
-                    </button>
-                </div>
-
-               
-
             </div>
         </div>
     </body>
