--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -20,6 +20,7 @@
             </h1>
 
             <div class="grid grid-cols-4 w-full mt-5 px-5 gap-0.5">
+
                 <div class="bg-tableHeader text-white px-3 py-1.5 font-medium col-span-2">
                     <span class="t_service_level_questionnaires"></span>
                 </div>
@@ -29,6 +30,19 @@
                 <div class="bg-tableHeader text-white text-center px-3 py-1.5 font-medium">
                     <span class="t_actions"></span>
                 </div>
+
+                <div class="bg-tableRowHover text-gray-600 px-3 py-1.5 font-medium col-span-2">
+                    <span class="t_institution_details"></span>
+                </div>
+                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium">
+                    <span id="status_ID"></span>
+                </div>
+                <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_ID">
+                        <span class="t_view_edit"></span>
+                    </button>
+                </div>
+
 
                 <div class="bg-tableRow text-gray-600 px-3 py-1.5 font-medium col-span-2">
                     <span class="t_questionnaire_on_the_material_resources"></span>
