--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -2,7 +2,7 @@
     <div>
         <span class="font-medium text-base px-4" id="username">Username</span>
     </div>
-    <div>
+    <div class="flex gap-4">
         <button class="flex items-center gap-2 text-white bg-gray-400 hover:bg-gray-500 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-3 py-1 me-2 mr-3" id="back">
             <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"> -->
                 <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
