add/edit user - WIP

--- a/src/pages/localCoordinator/03_users.html
+++ b/src/pages/localCoordinator/03_users.html
@@ -28,9 +28,8 @@
                 </div>
             </div>
             
-
             <div class="px-6 mt-5">
-                <table id="users_list" aria-describedby="users" style="width: 100%;" class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <table id="users_list" aria-describedby="users" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                         <tr>
                             <th scope="col" class="px-6 py-3">
