--- a/src/pages/localCoordinator/05_edit_user.html
+++ b/src/pages/localCoordinator/05_edit_user.html
@@ -16,13 +16,13 @@
         <div class="relative w-full mt-10 pb-10 h-[calc(100vh-5.5rem)] overflow-y-auto">
 
             <h1 class="px-5 text-xl mt-10">
-                <span class="t_add_user"></span>
+                <span class="t_edit_user"></span>
             </h1>
 
 
             <form class="px-6 mt-10">
 
-
+                <input type="hidden" name="user_id" id="user_id">
                 <div class="mt-4 flex gap-4">
                     <div class="w-2/12"></div>
                     <div class="flex gap-4 w-full">
