--- a/src/pages/localCoordinator/03_users.html
+++ b/src/pages/localCoordinator/03_users.html
@@ -22,12 +22,17 @@
                     <span class="t_users"></span>
                 </h1>
                 <div>
-                    <button class="bg-menuButton text-white px-4 py-2 rounded" id="add_user">
+                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_user">
+                        <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                            <path
+                                  d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+                        </svg>
                         <span class="t_add_user"></span>
                     </button>
                 </div>
             </div>
-            
+
             <div class="px-6 mt-5">
                 <table id="users_list" aria-describedby="users" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50">
