--- a/src/pages/localCollector/01_dashboard.html
+++ b/src/pages/localCollector/01_dashboard.html
@@ -11,8 +11,8 @@
     </head>
 
     <body class="relative">
-        <div class="absolute top-0 right-0 left-0 bg-slate-200 h-10 z-50" id="header">
-        </div>
+        <div class="absolute top-0 right-0 left-0 bg-slate-200 h-10 z-50" id="header"></div>
+        
         <div class="relative w-full pt-10 min-h-screen">
 
             <h1 class="px-5 text-xl mt-10">
