--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -51,7 +51,7 @@
                     <span id="status_QMR"></span>
                 </div>
                 <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_QMR">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" data-id="null" id="viewEdit_QMR">
                         <span class="t_view_edit"></span>
                     </button>
                 </div>
@@ -63,7 +63,7 @@
                     <span id="status_DSEE"></span>
                 </div>
                 <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_DSEE">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" data-id="null" id="viewEdit_DSEE">
                         <span class="t_view_edit"></span>
                     </button>
                 </div>
