--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -15,11 +15,32 @@
         </div>
         <div class="relative w-full mt-10 pb-10 h-[calc(100vh-5.5rem)] overflow-y-auto">
 
-            <h1 class="px-5 text-xl mt-10">
-                Questionnaire on the material resources
-            </h1>
-
             <form class="px-6 mt-10">
+
+                <div class="grid grid-cols-12 border">
+                    <div class="col-span-1 bg-stone-200 p-2"></div>
+                    <div class="col-span-11 p-2">
+                        <h1 class="text-4xl text-gray-700 pl-4 tracking-wide">Material resources of the institution and the living conditions of the residing children</h1>
+                        <p class="text-fuchsia-800">Questionnaire for childcare institutions and specialized boarding-schools</p>
+                    </div>
+                </div>
+
+                <p class="mt-4 mb-2 text-xl">INTRODUCTION </p>
+                <p class="mb-2">The primary goal of this data collection is to support the Government of Uzbekistan in transitioning from institutional care to family-type care for
+                    children deprived of parental care. To achieve this, we aim to build a robust monitoring mechanism at the national level. By collecting detailed data, we can inform
+                    evidence-based decisions and policies that promote family-based alternatives.</p>
+                <p class="mb-2">Another critical objective is to enhance the quality of services provided to children with disabilities in institutional care. By understanding their
+                    unique needs and experiences, we can develop targeted interventions and improve their overall well-being. Additionally, we seek to explore and promote adequate
+                    family-type alternatives for these children.</p>
+                <p class="mb-2">The data collection process involves gathering comprehensive information about children placed in institutional care and specialized boarding schools. We
+                    explore various aspects, including demographics, family background, health, education, living conditions, and risk behaviors, as well as the availability and
+                    effectiveness of recovery and rehabilitation services.</p>
+                <p class="mb-2">Please complete this questionnaire separately for each child currently in the child care system, regardless of the type of service they receive
+                    (residential or family-based) and whether it&#39;s provided by the state or a private provider. This questionnaire will be completed for children in the following
+                    types of services of the child care system: children&#39;s homes/baby homes, mehribonlik houses, muruvat houses for children with disabilities, family-type
+                    children&#39;s homes, SOS children&#39;s villages/families.</p>
+                <p class="mb-2">Complete the information based only on documents and data found in the child&#39;s file. If there is no information in the file regarding a specific
+                    question, please encircle the &quot;Unspecified/Unknown&quot; answer. Please do not include information from sources other than the child&#39;s file.</p>
 
 
             </form>
@@ -29,7 +50,7 @@
 
                     <button type="button"
                             class="flex items-center gap-2 text-white bg-menuButton/80 hover:bg-menuButton focus:ring-4 focus:ring-menuButton/50 font-medium rounded-lg text-sm px-3 py-1"
-                            id="saveForm">
+                            id="salveazaForm">
                         <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                             <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path
@@ -37,7 +58,15 @@
                         </svg>
                         <span class="t_button_save"></span>
                     </button>
-
+                    <button type="button"
+                            class="flex items-center gap-2 text-white bg-red-500 hover:bg-red-500 focus:ring-4 focus:ring-red-500/50 font-medium rounded-lg text-sm px-3 py-1 ml-4"
+                            id="debugForm">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bug" class="fill-white w-4 h-4" role="img" xmlns="http://www.w3.org/2000/svg"
+                             viewbox="0 0 512 512">
+                            <path fill="currentColor"
+                                  d="M511.988 288.9c-.478 17.43-15.217 31.1-32.653 31.1H424v16c0 21.864-4.882 42.584-13.6 61.145l60.228 60.228c12.496 12.497 12.496 32.758 0 45.255-12.498 12.497-32.759 12.496-45.256 0l-54.736-54.736C345.886 467.965 314.351 480 280 480V236c0-6.627-5.373-12-12-12h-24c-6.627 0-12 5.373-12 12v244c-34.351 0-65.886-12.035-90.636-32.108l-54.736 54.736c-12.498 12.497-32.759 12.496-45.256 0-12.496-12.497-12.496-32.758 0-45.255l60.228-60.228C92.882 378.584 88 357.864 88 336v-16H32.666C15.23 320 .491 306.33.013 288.9-.484 270.816 14.028 256 32 256h56v-58.745l-46.628-46.628c-12.496-12.497-12.496-32.758 0-45.255 12.498-12.497 32.758-12.497 45.256 0L141.255 160h229.489l54.627-54.627c12.498-12.497 32.758-12.497 45.256 0 12.496 12.497 12.496 32.758 0 45.255L424 197.255V256h56c17.972 0 32.484 14.816 31.988 32.9zM257 0c-61.856 0-112 50.144-112 112h224C369 50.144 318.856 0 257 0z">
+                            </path>
+                        </svg>&nbsp;debug</button>
                 </div>
             </footer>
 
