--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -1149,19 +1149,19 @@
                     <div class="col-span-1">AF11. How are domestic wastewaters disposed of?</div>
                     <div class="col-span-1 flex flex-col gap-2">
                         <div class="flex items-center">
-                            <input id="af11-1" type="radio" value="1" name="af10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <input id="af11-1" type="radio" value="1" name="af11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             <label for="af11-1" class="ms-2 text-sm text-gray-900">1. Through the public network</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="af11-2" type="radio" value="2" name="af10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <input id="af11-2" type="radio" value="2" name="af11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             <label for="af11-2" class="ms-2 text-sm text-gray-900">2. Into a septic tank</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="af11-3" type="radio" value="3" name="af10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <input id="af11-3" type="radio" value="3" name="af11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             <label for="af11-3" class="ms-2 text-sm text-gray-900">3. Into a drainable reservoir</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="af11-4" type="radio" value="4" name="af10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <input id="af11-4" type="radio" value="4" name="af11" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                             <label for="af11-4" class="ms-2 text-sm text-gray-900">4. By another system</label>
                         </div>
                     </div>
@@ -2145,41 +2145,41 @@
                     <tbody>
                         <tr>
                             <td>a. Fresh fruits (such as apples, bananas, oranges, grapes, etc.)</td>
-                            <td class="text-center p-1"><input id="cc10a-1" type="radio" value="1" name="c10a"
+                            <td class="text-center p-1"><input id="cc10a-1" type="radio" value="1" name="cc10a"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10a-2" type="radio" value="2" name="c10a"
+                            <td class="text-center p-1"><input id="cc10a-2" type="radio" value="2" name="cc10a"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10a-3" type="radio" value="3" name="c10a"
+                            <td class="text-center p-1"><input id="cc10a-3" type="radio" value="3" name="cc10a"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10a-4" type="radio" value="4" name="c10a"
+                            <td class="text-center p-1"><input id="cc10a-4" type="radio" value="4" name="cc10a"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10a-5" type="radio" value="5" name="c10a"
+                            <td class="text-center p-1"><input id="cc10a-5" type="radio" value="5" name="cc10a"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                         </tr>
                         <tr>
                             <td>b. Homemade desserts (such as cakes, pies, puddings, etc.)</td>
-                            <td class="text-center p-1"><input id="cc10b-1" type="radio" value="1" name="c10b"
+                            <td class="text-center p-1"><input id="cc10b-1" type="radio" value="1" name="cc10b"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10b-2" type="radio" value="2" name="c10b"
+                            <td class="text-center p-1"><input id="cc10b-2" type="radio" value="2" name="cc10b"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10b-3" type="radio" value="3" name="c10b"
+                            <td class="text-center p-1"><input id="cc10b-3" type="radio" value="3" name="cc10b"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10b-4" type="radio" value="4" name="c10b"
+                            <td class="text-center p-1"><input id="cc10b-4" type="radio" value="4" name="cc10b"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10b-5" type="radio" value="5" name="c10b"
+                            <td class="text-center p-1"><input id="cc10b-5" type="radio" value="5" name="cc10b"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                         </tr>
                         <tr class="border-b">
                             <td>c. Ready-made or processed foods (such as frozen meals, canned foods, processed meats, etc.)</td>
-                            <td class="text-center p-1"><input id="cc10c-1" type="radio" value="1" name="c10c"
+                            <td class="text-center p-1"><input id="cc10c-1" type="radio" value="1" name="cc10c"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10c-2" type="radio" value="2" name="c10c"
+                            <td class="text-center p-1"><input id="cc10c-2" type="radio" value="2" name="cc10c"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10c-3" type="radio" value="3" name="c10c"
+                            <td class="text-center p-1"><input id="cc10c-3" type="radio" value="3" name="cc10c"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10c-4" type="radio" value="4" name="c10c"
+                            <td class="text-center p-1"><input id="cc10c-4" type="radio" value="4" name="cc10c"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
-                            <td class="text-center p-1"><input id="cc10c-5" type="radio" value="5" name="c10c"
+                            <td class="text-center p-1"><input id="cc10c-5" type="radio" value="5" name="cc10c"
                                        class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200"></td>
                         </tr>
                     </tbody>
