--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -149,7 +149,7 @@
                 </div>
         
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                    <div>Name of the department within the institution. 80. Not applicable</div>
+                    <div>J2. Name of the department within the institution.</div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center gap-4">
                             <input type="text" id="j2" name="j2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
