--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                    <div>Название отдела в учреждении. 80. Неприменимо</div>
+                    <div>J2. Название отдела в учреждении</div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center gap-4">
                             <input type="text" id="j2" name="j2"
