--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -173,7 +173,7 @@
                 </div>
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                    <div>Muassasa tarkibidagi bo&#39;lim nomi. 80. Qo&#39;llanilmaydi</div>
+                    <div>J2. Muassasa tarkibidagi bo&#39;lim nomi</div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center gap-4">
                             <input type="text" id="j2" name="j2"
