--- a/src/pages/cityCollector/01_dashboard.html
+++ b/src/pages/cityCollector/01_dashboard.html
@@ -55,7 +55,7 @@
                     <span id="t2c14"></span>
                 </div>
                 <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_SWIS">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_FTCH">
                         <span class="t_view"></span>
                     </button>
                 </div>
@@ -97,7 +97,7 @@
                     <span id="t2c44"></span>
                 </div>
                 <div class="bg-tableRowHover text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_PFQ">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_PF">
                         <span class="t_view"></span>
                     </button>
                 </div>
