--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -3431,8 +3431,8 @@
                             <label for="qeduc2-2" class="ms-2 text-sm text-gray-900">2. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="qeduc2-7" type="radio" value="7" name="qeduc2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="qeduc2-7" class="ms-2 text-sm text-gray-900">7. Not applicable, the child was below 7 years of age</label>
+                            <input disabled id="qeduc2-7-disabled" type="radio" value="7" name="qeduc2disabled" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="qeduc2-7-disabled" class="ms-2 text-sm text-gray-900">7. Not applicable, the child was below 7 years of age</label>
                         </div>
                     </div>
                 </div>
