--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -3472,7 +3472,10 @@
                 </div>
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>2b. What grade was the child in?</div>
+                    <div>
+                        2b. What grade was the child in?
+                        <small class="mb-1 block italic text-red-500">Fill in 0 (zero) for preparatory class</small>
+                    </div>
                     <div>
                         <input type="text" id="qeduc2b" name="qeduc2b"
                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
