--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5093,21 +5093,24 @@
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
                     <div>
-                        LK22_2_7. The child/young person has associated disabilities (two or more types of disability) </div>
+                        LK22_2_7. The child/young person has associated disabilities (two or more types of disability)
+                        <small class="mt-2 block italic text-red-500">Automatically filled in.</small>
+                    </div>
                     <div class="col-span-1 flex flex-col gap-2">
                         <div class="flex items-center">
                             <input id="lk22_2_7-1" type="radio" value="1" name="lk22_2_7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk22_2_7-1" class="ms-2 text-sm text-gray-900">Automatically filled in.</label>
+                            <label for="lk22_2_7-1" class="ms-2 text-sm text-gray-900">1. Yes, associated disability</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="lk22_2_7-2" type="radio" value="0" name="lk22_2_7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk22_2_7-2" class="ms-2 text-sm text-gray-900">1. Yes, associated disability</label>
+                            <input id="lk22_2_7-0" type="radio" value="0" name="lk22_2_7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="lk22_2_7-0" class="ms-2 text-sm text-gray-900">0. No, just one type of disability</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="grid grid-cols-2 gap-4 items-center mt-10">
                     <div>
+                        <small class="mt-2 block italic text-red-500">IF MENTAL DISABILITY IS CHECKED IN LK22_2</small>
                         LK22_2m. According to the certificate, what degree of disability does the child experience? </div>
                     <div class="col-span-1 flex flex-col gap-2">
                         <div class="flex items-center">
@@ -5556,12 +5559,12 @@
                     </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="edk0-1" type="radio" value="1" name="edk0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk0-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                            <input id="edk0-0" type="radio" value="0" name="edk0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk0-0" class="ms-2 text-sm text-gray-900">0. No </label>
                         </div>
                         <div class="flex items-center">
-                            <input id="edk0-2" type="radio" value="2" name="edk0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk0-2" class="ms-2 text-sm text-gray-900">0. No </label>
+                            <input id="edk0-1" type="radio" value="1" name="edk0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk0-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
                     </div>
                 </div>
@@ -5594,24 +5597,24 @@
                         EDK2. In what educational cycle is the child enrolled? </div>
                     <div class="col-span-1 flex flex-col gap-2">
                         <div class="flex items-center">
-                            <input id="edk2-1" type="radio" value="0" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk2-1" class="ms-2 text-sm text-gray-900">0. Preschool</label>
+                            <input id="edk2-0" type="radio" value="0" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk2-0" class="ms-2 text-sm text-gray-900">0. Preschool</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="edk2-2" type="radio" value="1" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk2-2" class="ms-2 text-sm text-gray-900">1. Primary education (grades 1-4)</label>
+                            <input id="edk2-1" type="radio" value="1" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk2-1" class="ms-2 text-sm text-gray-900">1. Primary education (grades 1-4)</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="edk2-3" type="radio" value="2" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk2-3" class="ms-2 text-sm text-gray-900">2. Secondary education (grades 5-9)</label>
+                            <input id="edk2-2" type="radio" value="2" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk2-2" class="ms-2 text-sm text-gray-900">2. Secondary education (grades 5-9)</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="edk2-4" type="radio" value="3" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk2-4" class="ms-2 text-sm text-gray-900">3. Secondary/vocational (grades 10-11)</label>
+                            <input id="edk2-3" type="radio" value="3" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk2-3" class="ms-2 text-sm text-gray-900">3. Secondary/vocational (grades 10-11)</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="edk2-5" type="radio" value="4" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="edk2-5" class="ms-2 text-sm text-gray-900">4. Tertiary education</label>
+                            <input id="edk2-4" type="radio" value="4" name="edk2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="edk2-4" class="ms-2 text-sm text-gray-900">4. Tertiary education</label>
                         </div>
                     </div>
                 </div>
@@ -5630,12 +5633,16 @@
                         EWM1. In the past six months, did the student have low school attendance? </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="ewm1-1" type="radio" value="1" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm1-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                            <input id="ewm1-0" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm1-0" class="ms-2 text-sm text-gray-900">0. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm1-2" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm1-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                            <input id="ewm1-0" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-000">
+                            <label for="ewm1-0" class="ms-2 text-sm text-gray-900">0. No</label>
+                        </div>
+                        <div class="flex items-center">
+                            <input id="ewm1-1" type="radio" value="1" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm1-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
                     </div>
                 </div>
@@ -5645,12 +5652,12 @@
                         EWM2. Did the student have poor or below average school performances? </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="ewm2-1" type="radio" value="1" name="ewm2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm2-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                            <input id="ewm2-0" type="radio" value="0" name="ewm2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm2-0" class="ms-2 text-sm text-gray-900">0. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm2-2" type="radio" value="0" name="ewm2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm2-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                            <input id="ewm2-1" type="radio" value="1" name="ewm2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm2-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
                     </div>
                 </div>
@@ -5660,16 +5667,16 @@
                         EWM3. Has the student ever repeated a school year since he is in school? </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="ewm3-1" type="radio" value="0" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm3-1" class="ms-2 text-sm text-gray-900">0. No</label>
+                            <input id="ewm3-0" type="radio" value="0" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm3-0" class="ms-2 text-sm text-gray-900">0. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm3-2" type="radio" value="1" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm3-2" class="ms-2 text-sm text-gray-900">1. Yes, once</label>
+                            <input id="ewm3-1" type="radio" value="1" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm3-1" class="ms-2 text-sm text-gray-900">1. Yes, once</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm3-3" type="radio" value="2" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm3-3" class="ms-2 text-sm text-gray-900">2. Yes, repeatedly</label>
+                            <input id="ewm3-2" type="radio" value="2" name="ewm3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm3-2" class="ms-2 text-sm text-gray-900">2. Yes, repeatedly</label>
                         </div>
                     </div>
                 </div>
@@ -5682,12 +5689,12 @@
                     </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="ewm4-1" type="radio" value="1" name="ewm4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm4-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                            <input id="ewm4-0" type="radio" value="0" name="ewm4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm4-0" class="ms-2 text-sm text-gray-900">0. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm4-2" type="radio" value="0" name="ewm4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm4-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                            <input id="ewm4-1" type="radio" value="1" name="ewm4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm4-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
                     </div>
                 </div>
@@ -5697,12 +5704,12 @@
                         EWM5. Is the student at risk of early school leaving? </div>
                     <div class="col-span-1 flex items-center gap-4">
                         <div class="flex items-center">
-                            <input id="ewm5-1" type="radio" value="1" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm5-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                            <input id="ewm5-0" type="radio" value="0" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm5-0" class="ms-2 text-sm text-gray-900">0. No</label>
                         </div>
                         <div class="flex items-center">
-                            <input id="ewm5-2" type="radio" value="0" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="ewm5-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                            <input id="ewm5-1" type="radio" value="1" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                            <label for="ewm5-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
                     </div>
                 </div>
