--- a/src/pages/evaluator/01_dashboard.html
+++ b/src/pages/evaluator/01_dashboard.html
@@ -60,7 +60,7 @@
                     <span id="t1c14"></span>
                 </div>
                 <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="details_QMR">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="view_list_EEF">
                         <span class="t_details"></span>
                     </button>
                 </div>
