--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -940,11 +940,11 @@
                     <thead>
                         <tr>
                             <th></th>
-                            <th>1. Very bad</th>
-                            <th>2. Bad</th>
-                            <th>3. Neither nor</th>
-                            <th>4. Good</th>
-                            <th>5. Very good</th>
+                            <th>Very<br>bad</th>
+                            <th>Bad</th>
+                            <th>Neither<br>nor</th>
+                            <th>Good</th>
+                            <th>Very<br>good</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -1331,7 +1331,7 @@
                         <tr class="border-b">
                             <th class="p-2 text-left">AC1. Please provide the following information about the institution&#39;s accommodation capacity</th>
                             <th class="p-2 text-center">Total number of rooms</th>
-                            <th class="p-2 text-center">Total ares (sqm)</th>
+                            <th class="p-2 text-center">Total area (sqm)</th>
                         </tr>
                     </thead>
                     <tbody>
